@@ -214,3 +214,9 @@
 2011-06-09  Cedric Bail
 
 	* Add ecore_pipe_wait (should only called from outside of the main loop).
+
+2011-06-15  Mike Blumenkrantz
+
+        * Add ecore_con_ssl_client/server_upgrade to begin asynchronously upgrading an
+        existing connection to SSL/TLS, emitting ECORE_CON_CLIENT/SERVER_UPGRADE event
+        upon completion.
